--- a/_config.yml
+++ b/_config.yml
@@ -14,10 +14,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: "Ziyi Lu → software engineer"
-email: 'lzy-1006@berkeley.edu'
-description: "↳ Senior undergrad in UC Berkeley, \n↳ seeking a Software Engineer position."
+email: 'lzy-100@berkeley.edu'
+description: "↳ Senior undergrad in UC Berkeley, \n↳ seeking a Software Engineer position. \n ↳(Back-end, front-end, full-stack)"
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://lzy-106.github.io/" # the base hostname & protocol for your site, e.g. https://example.com
+url: "https://lzy-106.github.io" # the base hostname & protocol for your site, e.g. https://example.com
 twitter_username: ''
 github_username: 'lzy-106'
 medium_username: ''
